# pyramid-blacksmith

./: CHANGELOG.rst  Justfile  README.rst  pyproject.toml
.github/workflows/: main.yml  tests-artifacts.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/develop/: api.rst  binding.rst  middleware.rst  middleware_factory.rst  utils.rst
docs/source/user/: api.rst  configuration.rst  introduction.rst  middleware_factories.rst  middlewares.rst  middlewares_factories.rst  multi_clients.rst  paste.ini
docs/source/user/sd/: consul.ini  router-in-test.ini  router.ini  static.ini
examples/authenticated_client/: README.rst
examples/authenticated_client/notif/: development.ini
examples/authenticated_client/notif/src/notif/: __init__.py  views.py
examples/authenticated_client/user/src/user/: __init__.py
examples/multi_clients/: README.rst  docker-compose.yml
examples/multi_clients/notif/: Dockerfile  development.ini  pyproject.toml
examples/simple_client/: docker-compose.yml
examples/simple_client/notif/: development.ini  pyproject.toml
examples/simple_client/notif/src/notif/: __init__.py
scripts/: get_version.py  show_release.py  write_changelog.py
src/pyramid_blacksmith/: __init__.py  binding.py  middleware.py  middleware_factory.py  utils.py
src/pyramid_blacksmith/adapters/: zipkin.py
tests/: test_pyramid_blacksmith.py
tests/unittests/: __init__.py  conftest.py  fixtures.py  test_binding.py  test_includeme.py  test_middleware.py  test_middleware_factory.py  test_utils.py  transport.py
tests/unittests/resources/: dummies.py
(+1 files in other folders)
