[tool.poetry]
name = "pyramid-blacksmith"
version = "0.1.0"
description = "Pyramid Bindings for Blacksmith"
homepage = "https://github.com/mardiros/pyramid-blacksmith"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pyramid",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.7"
pyramid = ">1.10, ^2.0"
blacksmith = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
coverage = {version = "^6.2", extras = ["toml"]}
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
norecursedirs = "docs"

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "except ImportError:",
  "except pkg_resources.DistributionNotFound:",
  "...",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
