[tool.poetry]
name = "notif"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.plugins."paste.app_factory"]
main = "notif:main"

[tool.poetry.dependencies]
python = "^3.10"
pyramid = "^2.0.0"
pyramid-blacksmith = "^0.1.0"
waitress = "^2.0.0"
prometheus-client = "^0.12.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
